[package]
name = "tdff_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.2"
itertools = "0.10.5"
json-writer = "0.2.1"
openssl = "0.10.45"
regex = "1.7.0"
walkdir = "2.3.2"
[profile.release]
debug = true
